# clanker-chess

./: .gitignore  CMakeLists.txt  agent.py  counter.py  default_board.json  game.cpp  game.py  main.py
api/: counter.json  default_board.json  game.py
include/: file.hpp  game.hpp
src/: file.cpp  game.cpp  main.cpp  test.cpp
web/: account.html  admin.html  games.html  index.html  signin.html  users.html  utils.js
